Also copy the classes into the outputDir
Without this, using the outputDir on the classpath wouldn't work for
subprojects which depend on this module.